2005-08-31 16:31 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge) to prevent a non-manifold grid, do
	do not allow an edge swap to add a face that alread exists in the
	grid.

2005-08-29 10:45 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) to
	increase the stability of gauss-sidel iterations, the variation
	of modulus_of_elasticity is reduced by raising to to the 0.2 power.
	also set poisson = 0.0, which is what jim had in fun3d gridmove.

2005-08-19 14:45 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) ported
	Jim Thomas version of HEFSS.rps/LibF90/grid_move.f90:filla_interior
	from FUN3D. using modulus_of_elasticity = 1/AspectRatio and
	poisson = 0.05 (Jim choose 0.0).
	* src/gridmove.c (gridmoveElasticRelax_Old_StartStep) renamed
	to save original gridmoveElasticRelaxationStartStep routine.
	
2005-08-19 11:05 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelRelaxNegativeFaceAreaUV) increased the
	face area in UV that requires fixing from 1.0e-14 to 1.0e-12 to
	allow the om6 case to run on cmb20.
	
2005-08-17 16:50 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) drop gridSetMinInsertCost for linear adapt.
	
2005-08-17 15:28 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) added --vaild to turn on gridCOST_CNST_VALID.
	
2005-08-17 15:15 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddSegment) update existing segment uv's from
	latest segment

2005-08-17 15:07 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSegmentIntersectsFace) return NULL if
	iteration count exceeded.

2005-08-15 15:07 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotEquatorFaces) added to dump out the
	equator as faces around the axle instead of outer faces.

2005-08-15 09:28 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringArea) to speed up execution... compute, store,
	and always reply with result from first invocation.
